--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Presence</string>
+    <string name="brand">Presence</string>
     <string name="activity">Activity</string>
     <string name="report">Report</string>
     <string name="profile">Profile</string>
