--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="error_nowifi">Wifi is disabled. Please enable wifi to continue</string>
     <string name="error_noprovider">The service provider url is not set, please specify it to continue!</string>
     <string name="error_norequest">Request failed!</string>
-     <string name="error_nostatus">You are out of range!</string>
-     <string name="error_noconfig">The application is not configured!</string>
+    <string name="error_nostatus">You are out of range!</string>
+    <string name="popup_uuid_title">Device UUID</string> 
 
 </resources>
