--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="error_norequest">Request failed!</string>
     <string name="error_nostatus">You are out of range!</string>
     <string name="popup_uuid_title">Device UUID</string>
+    <string name="profile_updated">The user profile has been updated!</string>
 
 </resources>
